--- a/package.json
+++ b/package.json
@@ -42,6 +42,8 @@
     "@radix-ui/react-tooltip": "^1.1.4",
     "@reduxjs/toolkit": "^2.5.0",
     "@tanstack/react-query": "^5.62.3",
+    "@wix/data": "^1.0.188",
+    "@wix/sdk": "^1.15.7",
     "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -49,6 +51,7 @@
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.5.1",
     "input-otp": "^1.4.1",
+    "js-cookie": "^3.0.5",
     "lucide-react": "^0.462.0",
     "next": "14.2.14",
     "next-themes": "^0.4.3",
